language/move-lang/tests/move_check/translated_ir_tests/commands/while_move_local_2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/while_move_local_2.move:7:17 ───
   │
 7 │             y = move x;
   │                 ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │                 ^^^^^^ Invalid usage of local 'x'
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/while_move_local_2.move:9:17 ───
   │
 9 │             x = move y;
   │                 ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │                 ^^^^^^ Invalid usage of local 'y'
   │

